kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: supportsphere
  labels:
    environment: production
